// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> renders correctly with no properties 1`] = `
<body
  class="bp3-overlay-open"
>
  <div />
  <div
    class="bp3-portal dialog-portal-container"
  >
    <div
      aria-live="polite"
      class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
    >
      <div
        class="bp3-overlay-start-focus-trap bp3-overlay-appear bp3-overlay-appear-active"
        tabindex="0"
      />
      <div
        class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
      />
      <div
        class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
      >
        <div
          aria-labelledby="title-bp-dialog-0"
          class="bp3-dialog Dialog"
          role="dialog"
        >
          <div
            class="bp3-dialog-header"
          >
            <span
              aria-hidden="true"
              class="bp3-icon bp3-icon-info-sign"
              icon="info-sign"
              tabindex="-1"
            >
              <svg
                data-icon="info-sign"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <h4
              class="bp3-heading"
              id="title-bp-dialog-0"
            >
              Lorem Ipsum
            </h4>
            <button
              aria-label="Close"
              class="bp3-button bp3-minimal bp3-dialog-close-button"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp3-icon bp3-icon-small-cross"
                icon="small-cross"
              >
                <svg
                  data-icon="small-cross"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Dialog__content"
          >
            Hello World
          </div>
        </div>
      </div>
      <div
        class="bp3-overlay-end-focus-trap bp3-overlay-appear bp3-overlay-appear-active"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`<Dialog /> renders custom classes 1`] = `
<body
  class="bp3-overlay-open"
>
  <div />
  <div
    class="bp3-portal dialog-portal-container"
  >
    <div
      aria-live="polite"
      class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
    >
      <div
        class="bp3-overlay-start-focus-trap bp3-overlay-appear bp3-overlay-appear-active"
        tabindex="0"
      />
      <div
        class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
      />
      <div
        class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
      >
        <div
          aria-labelledby="title-bp-dialog-1"
          class="bp3-dialog Dialog my-dialog"
          role="dialog"
        >
          <div
            class="bp3-dialog-header"
          >
            <span
              aria-hidden="true"
              class="bp3-icon bp3-icon-info-sign"
              icon="info-sign"
              tabindex="-1"
            >
              <svg
                data-icon="info-sign"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <h4
              class="bp3-heading"
              id="title-bp-dialog-1"
            >
              Lorem Ipsum
            </h4>
            <button
              aria-label="Close"
              class="bp3-button bp3-minimal bp3-dialog-close-button"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp3-icon bp3-icon-small-cross"
                icon="small-cross"
              >
                <svg
                  data-icon="small-cross"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Dialog__content"
          >
            Hello World
          </div>
        </div>
      </div>
      <div
        class="bp3-overlay-end-focus-trap bp3-overlay-appear bp3-overlay-appear-active"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
